# vermagic_modifier

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
vermagic_modifier/: __main__.py  discoverer.py  modifier.py  modinfo.py
